<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loginPageBackgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="110dp"
                android:layout_marginBottom="170dp"
                android:text="@string/qr_app_name"
                android:textAllCaps="true"
                android:textColor="#58B033"
                android:textSize="43sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.QR.TextInputLayout"
                android:id="@+id/id_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qr_hint_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.QR.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qr_hint_password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    style="@style/Widget.QR.Button2"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/qr_button_next" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/findId_button"
                        style="@style/Widget.QR.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/qr_button_findId" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/findPassword_button"
                        style="@style/Widget.QR.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/qr_button_findPassword" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up_button"
                        style="@style/Widget.QR.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/qr_button_regist" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</layout>